fixed scroll spacing issues
Added height check to fixed sidemnu in js to check for height of menu. adjustSideHeight() only runs if side menu is over 300px high

--- a/source/sass/partials/_nav.scss
+++ b/source/sass/partials/_nav.scss
@@ -573,11 +573,11 @@ aside .nav > li > a:hover, aside .nav > li > a:focus {
 
 @media (min-width: 768px) {
   .sidemenu.showfeatured {
-    padding-top: 75px; } }
+    padding-top: 124px; } }
 
 @media (min-width: 768px) {
   .showfeatured.shrink {
-    padding-top: 100px; } }
+    padding-top: 70px; } }
 
 .pside-inner {
   position: relative; }
